Updates help message.

--- a/lua/Makefile
+++ b/lua/Makefile
@@ -9,7 +9,7 @@ all: help
 help:
 	@echo ""
 	@echo "This is a Lua skeleton project makefile. Possible rules:"
-	@echo "\tall - prints this help."
+	@echo "\thelp - prints this help."
 	@echo "\trun - executes main lua script if it's not a library project."
 	@echo "\ttest - runs tests."
 	@echo ""
