--- a/c/exec/Makefile
+++ b/c/exec/Makefile
@@ -16,7 +16,7 @@ all: $(TARGET) run
 
 
 $(TARGET): $(OUT_DIR) $(OUT_OBJS)
-	$(CC) $(LDFLAGS) $(OUT_OBJS) -o $@
+	$(CC) $(OUT_OBJS) $(LDFLAGS) -o $@
 
 
 $(OUT_DIR)/%.o: $(SRC_DIR)/%.c
