C++_cmake: refactors Makefile.

--- a/c++/cmake/Makefile
+++ b/c++/cmake/Makefile
@@ -2,7 +2,9 @@ BUILD_DIR = build
 BUILD_TYPE ?= Debug
 CMAKE_DIR = $(CURDIR)
 
+
 all: cmake
+.PHONY: all
 
 
 cmake: $(BUILD_DIR)
@@ -10,6 +12,7 @@ cmake: $(BUILD_DIR)
 		-D CMAKE_BUILD_TYPE=$(BUILD_TYPE) \
 		$(CMAKE_DIR) ; \
 		make
+.PHONY: cmake
 
 
 test: $(BUILD_DIR)
@@ -18,14 +21,9 @@ test: $(BUILD_DIR)
 		$(CMAKE_DIR) ; \
 		make build_test; \
 		make test
-
-
-$(BUILD_DIR):
-	mkdir -p $(BUILD_DIR)
+.PHONY: test
 
 
 clean:
 	rm -rf $(BUILD_DIR)
-
-
-.PHONY: all cmake clean
+.PHONY: clean
