--- a/gwt/build.xml
+++ b/gwt/build.xml
@@ -1,25 +1,53 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<project name="Skeleton" default="build" basedir=".">
+
+<project name="Example" xmlns:ivy="antlib:org.apache.ivy.ant"
+	default="build" basedir=".">
+
+	<property name="project.module-name" value="com.example.Main" />
+
+	<property name="build.dir" value="build" />
+	<property name="gwt.cache.dir" value="${build.dir}/gwt-unitCache" />
+	<property name="codeserver.dir" value="${build.dir}/codeserver" />
+
+	<property name="test.src.dir" value="test" />
+	<property name="test.build.dir" value="${build.dir}/classes/test" />
+
+	<property name="src.dir" value="src" />
+	<property name="src.build.dir" value="${build.dir}/classes/src" />
+
+	<property name="libs.dir" value="lib" />
 
 	<!-- Arguments to gwtc and devmode targets -->
 	<!-- indirectly used by build and test targets (directly by javac) -->
 	<property name="gwt.args.release" value="-logLevel WARN -workDir
-		tmp/compiler/ -optimize 9 -strict" />
+		${build.dir}/compiler/ -optimize 9 -strict" />
 
 	<!-- makes environment variables available with env. prefix -->
 	<property environment="env" />
 
 	<!-- sets class path -->
 	<path id="project.class.path">
-		<pathelement location="tmp/classes/src/"/>
-		<fileset dir="lib" includes="*.jar"/>
+		<pathelement location="${src.build.dir}" />
+		<fileset dir="${libs.dir}" includes="*.jar"/>
 	</path>
 
 
-	<target name="javac" description="Compile java source">
-		<mkdir dir="tmp/classes/src"/>
-		<javac srcdir="src" includes="**" encoding="utf-8"
-				destdir="tmp/classes/src/"
+	<!--
+	Resolve target used for easier library dependency
+	process.
+	-->
+	<target name="resolve-deps" description="Retrieve dependencies with
+		ivy.">
+		<mkdir dir="${libs.dir}" />
+		<ivy:retrieve conf="production" />
+		<ivy:retrieve conf="development" />
+	</target>
+
+
+	<target name="javac" description="Compile Java sources.">
+		<mkdir dir="${src.build.dir}"/>
+		<javac srcdir="${src.dir}" includes="**" encoding="utf-8"
+			destdir="${src.build.dir}"
 				source="1.6" target="1.6"
 				nowarn="true"
 				debug="true"
@@ -33,28 +61,23 @@
 
 
 	<target name="gwtc" depends="javac"
-		description="GWT compiles class files to JavaScript">
+		description="GWT compiles class files to JavaScript.">
 
-		<mkdir dir="tmp/gwt-unitCache/"/>
-
-		<property name="gwt-cache-location"
-			location="tmp/gwt-unitCache/"/>
-
+		<mkdir dir="${gwt.cache.dir}" />
 		<java failonerror="true" fork="true"
 			classname="com.google.gwt.dev.Compiler">
 
 			<sysproperty key="gwt.persistentunitcachedir"
-				value="${gwt-cache-location}"/>
+				value="${gwt.cache.dir}" />
 
 			<classpath>
 				<pathelement location="src/" />
-				<pathelement location="tmp/classes/src"/>
 				<path refid="project.class.path"/>
 			</classpath>
 
 			<jvmarg value="-Xmx256M"/>
 			<arg line="${gwt.args.release}"/>
-			<arg value="com.example.skeleton.Main"/>
+			<arg value="${project.module-name}"/>
 
 		</java>
 
@@ -68,7 +91,7 @@
 
 
 	<target name="clean" description="Cleans this project">
-		<delete dir="tmp" failonerror="false" />
+		<delete dir="${build.dir}" failonerror="false" />
 		<delete dir="war/Main" failonerror="false" />
 		<delete dir="war/WEB-INF" failonerror="false" />
 	 </target>
@@ -76,7 +99,7 @@
 	<target name="codeserver" depends="javac"
 		description="Runs Code Server (superdevmode)">
 
-		<mkdir dir="tmp/code-server/"/>
+		<mkdir dir="${codeserver.dir}" />
 
 		<java failonerror="true" fork="true"
 			classname="com.google.gwt.dev.codeserver.CodeServer">
@@ -92,12 +115,10 @@
 			<arg line="-port"/>
 			<arg value="9876"/>
 			<arg value="-workDir"/>
-			<arg value="tmp/code-server/"/>
+			<arg value="${codeserver.dir}" />
 			<arg line="-src"/>
-			<arg value="src"/>
-			<arg value="com.example.skeleton.Main"/>
+			<arg value="${src.dir}" />
+			<arg value="${project.module-nam}" />
 		</java>
 	</target>
-
-
 </project>
