--- a/gwt/ivy.xml
+++ b/gwt/ivy.xml
@@ -13,6 +13,8 @@
 			conf="production->default"/>
 		<dependency org="com.google.gwt" name="gwt-dev" rev="2.6.0"
 			conf="production->default"/>
+		<dependency org="javax.validation" name="validation-api"
+			rev="1.0.0.GA" />
 
 		<!-- development -->
 		<dependency org="com.google.gwt" name="gwt-codeserver"
