Adds ivy dependency list file.

--- a/gwt/ivy.xml
+++ b/gwt/ivy.xml
@@ -1,29 +1,29 @@
 <ivy-module version="2.2">
-	<info organisation="com.example" module="Main"/>
+	<info organisation="com.example.skeleton" module="Main" />
 
 	<configurations>
-		<conf name="development" description="Needed to run in
-			development environment." />
-		<conf name="production" description="Needed for production
-			environment." />
+		<conf name="debug" description="Needed to run in debug mode." />
+		<conf name="compile" description="Needed for compilation
+			(other GWT libraries)." />
 	</configurations>
 
 	<dependencies>
 		<dependency org="com.google.gwt" name="gwt-user" rev="2.6.0"
-			conf="production->default"/>
+			conf="compile->default"/>
 		<dependency org="com.google.gwt" name="gwt-dev" rev="2.6.0"
-			conf="production->default"/>
+			conf="compile->default"/>
 		<dependency org="javax.validation" name="validation-api"
 			rev="1.0.0.GA" />
 
 		<!-- development -->
-		<dependency org="com.google.gwt" name="gwt-codeserver"
-			rev="2.6.0" conf="development->default"/>
-
 		<dependency org="junit" name="junit" rev="4.11"
-			conf="development->default" />
+			conf="debug->default" />
 
 		<dependency org="org.apache.ant" name="ant-junit" rev="1.8.2"
-			conf="development->default"/>
+			conf="debug->default"/>
+
+		<dependency org="com.googlecode.gwt-test-utils"
+			name="gwt-test-utils" rev="0.47"
+			conf="debug->default" />
 	</dependencies>
 </ivy-module>
