--- a/c++/cmake/Makefile
+++ b/c++/cmake/Makefile
@@ -1,30 +1,74 @@
-BUILD_DIR = build
+BUILD_DIR ?= build
 BUILD_TYPE ?= Debug
+BUILD_TESTS ?= OFF
 CMAKE_DIR = $(CURDIR)
 
+PROJECT_NAME = main
+OUTPUT_EXEC = $(PROJECT_NAME)
 
-all: cmake
+
+all:
+	@echo "Usage:"
+	@echo "\tmake release"
+	@echo "\tmake debug"
+	@echo "\tmake test"
+	@echo "\tmake test-memleaks"
 .PHONY: all
 
 
-cmake:
-	mkdir -p $(BUILD_DIR)
-	cd $(BUILD_DIR); cmake \
+build:
+	mkdir -p $(BUILD_DIR) ; cd $(BUILD_DIR) ; \
+		cmake \
 		-D CMAKE_BUILD_TYPE=$(BUILD_TYPE) \
-		$(CMAKE_DIR) ; \
-		make
-.PHONY: cmake
+		-D PROJECT_NAME=$(PROJECT_NAME) \
+		-D SKELETON_ENABLE_TESTS=$(BUILD_TESTS) \
+		$(CMAKE_DIR) ; make
+.PHONY: build
 
 
-test: cmake
-	cd $(BUILD_DIR); cmake \
-		-D CMAKE_BUILD_TYPE="Test" \
-		$(CMAKE_DIR) ; \
-		make build_test; \
-		make test
+release:
+	BUILD_TYPE=Release BUILD_DIR=build/release $(MAKE) build
+.PHONY: release
+
+
+debug:
+	BUILD_TYPE=Debug BUILD_DIR=build/debug $(MAKE) build
+.PHONY: debug
+
+
+# Tests are build in the same directory so that we would not have to recompile
+# everything jus to run the tests.
+test:
+	BUILD_TYPE=Release BUILD_DIR=build/release BUILD_TESTS=ON \
+		$(MAKE) build
+	cd $(BUILD_DIR)/release ; make run-tests
 .PHONY: test
 
 
+test-memleaks:
+	BUILD_TYPE=Release BUILD_DIR=build/release BUILD_TESTS=ON \
+		$(MAKE) build
+	cd $(BUILD_DIR)/release ; make run-memleak-tests
+.PHONY: test-memleaks
+
+
+test-memleaks-debug:
+	BUILD_TYPE=Debug BUILD_DIR=build/debug BUILD_TESTS=ON \
+		$(MAKE) debug
+	cd $(BUILD_DIR)/debug ; make run-memleak-tests
+.PHONY: test-memleaks-debug
+
+
 clean:
-	rm -rf $(BUILD_DIR)
+	rm -rf build
 .PHONY: clean
+
+
+run-release:
+	./$(BUILD_DIR)/release/$(OUTPUT_EXEC)
+.PHONY: run-release
+
+
+run-debug:
+	./$(BUILD_DIR)/debug/$(OUTPUT_EXEC)
+.PHONY: run-debug
