--- a/c++/cmake/CMakeLists.txt
+++ b/c++/cmake/CMakeLists.txt
@@ -13,7 +13,7 @@ option(SKELETON_ENABLE_TESTS "Enables or disables tests. Disabled by default."
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}.")
 
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -ggdb")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fstack-protector -s")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fstack-protector")
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Werror -pedantic")
 
 set(LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
