--- a/c++/boost-sample/CMakeLists.txt
+++ b/c++/boost-sample/CMakeLists.txt
@@ -8,7 +8,7 @@ message(STATUS "Build type: ${CMAKE_BUILD_TYPE}.")
 
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -ggdb")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Werror -pedantic")
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -pedantic")
 
 
 set(libs_dir "${CMAKE_CURRENT_SOURCE_DIR}/lib")
