Updated c++ project skeleton.

--- a/c++/cmake/Makefile
+++ b/c++/cmake/Makefile
@@ -1,64 +1,46 @@
-BUILD_DIR ?= build
-BUILD_TYPE ?= Debug
-BUILD_TESTS ?= OFF
-CMAKE_DIR = $(CURDIR)
+build_type ?= Release
+build_type_lower = ${shell echo ${build_type} | tr "[:upper:]" "[:lower:]"}
 
-OUTPUT_EXEC = main
+build_dir ?= build/${build_type_lower}
+cmake_dir := $(CURDIR)
+
+build_tests ?= OFF
 
 
 all:
 	@echo "Usage:"
 	@echo "\tmake release"
 	@echo "\tmake debug"
-	@echo "\tmake test"
-	@echo "\tmake test-memleaks"
 	@echo "\tmake docs"
-	@echo "\tmake run-release"
-	@echo "\tmake run-debug"
+	@echo "\tmake run"
+	@echo "\tmake test"
 	@echo "\tmake clean"
 .PHONY: all
 
 
 build:
-	mkdir -p $(BUILD_DIR) ; cd $(BUILD_DIR) ; \
+	mkdir -p $(build_dir) && cd $(build_dir) && \
 		cmake \
-		-D CMAKE_BUILD_TYPE=$(BUILD_TYPE) \
-		-D SKELETON_ENABLE_TESTS=$(BUILD_TESTS) \
-		$(CMAKE_DIR) ; make
+		-D CMAKE_BUILD_TYPE=$(build_type) \
+		-D SKELETON_ENABLE_TESTS=$(build_tests) \
+		$(cmake_dir) && make
 .PHONY: build
 
 
 release:
-	BUILD_TYPE=Release BUILD_DIR=build/release $(MAKE) build
+	build_type=Release $(MAKE) build
 .PHONY: release
 
 
 debug:
-	BUILD_TYPE=Debug BUILD_DIR=build/debug CXX=clang++ $(MAKE) build
+	build_type=Debug CXX=clang++ $(MAKE) build
 .PHONY: debug
 
 
-# Tests are build in the same directory so that we would not have to recompile
-# everything jus to run the tests.
 test:
-	BUILD_TYPE=Release BUILD_DIR=build/release BUILD_TESTS=ON \
-		$(MAKE) build
-	cd $(BUILD_DIR)/release ; make run-tests
+	build_tests=ON $(MAKE) build
+	make -C $(build_dir) run-tests
 .PHONY: test
-
-
-test-memleaks:
-	BUILD_TYPE=Release BUILD_DIR=build/release BUILD_TESTS=ON \
-		$(MAKE) build
-	cd $(BUILD_DIR)/release ; make run-memleak-tests
-.PHONY: test-memleaks
-
-
-test-memleaks-debug:
-	BUILD_TYPE=Debug BUILD_DIR=build/debug BUILD_TESTS=ON \
-		$(MAKE) debug
-	cd $(BUILD_DIR)/debug ; make run-memleak-tests
-.PHONY: test-memleaks-debug
 
 
 clean:
@@ -66,17 +48,13 @@ clean:
 .PHONY: clean
 
 
-run-release:
-	./$(BUILD_DIR)/release/$(OUTPUT_EXEC)
-.PHONY: run-release
-
-
-run-debug:
-	./$(BUILD_DIR)/debug/$(OUTPUT_EXEC)
-.PHONY: run-debug
-
-
 docs:
-	mkdir -p $(BUILD_DIR)
+	mkdir -p $(build_dir)
 	doxygen Doxyfile
 .PHONY: docs
+
+
+# Redirect all undefined targets to cmake.
+%:
+	make -C $(build_dir) $@
+.PHONY:
