Refactored cmake script.

--- a/c++/cmake/CMakeLists.txt
+++ b/c++/cmake/CMakeLists.txt
@@ -16,15 +16,13 @@ set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -ggdb")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fstack-protector")
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Werror -pedantic")
 
-set(LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
+set(src_dir "${CMAKE_CURRENT_SOURCE_DIR}/src")
+file(GLOB_RECURSE src_files "${src_dir}/*.cpp")
+set(MAIN_SRC "${src_dir}/main.cpp")
+list(REMOVE_ITEM src_files "${MAIN_SRC}")
 
-set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
-file(GLOB_RECURSE SRC_FILES "${SRC_DIR}/*.cpp")
-set(MAIN_SRC "${SRC_DIR}/main.cpp")
-list(REMOVE_ITEM SRC_FILES "${MAIN_SRC}")
-
-add_library("${project_lib}" STATIC ${SRC_FILES})
+add_library("${project_lib}" STATIC ${src_files})
 set_target_properties(${project_lib} PROPERTIES
 	OUTPUT_NAME ${PROJECT_NAME})
 
