--- a/c++/cmake/test/CMakeLists.txt
+++ b/c++/cmake/test/CMakeLists.txt
@@ -27,10 +27,13 @@ set(test_bin_dir "${CMAKE_CURRENT_BINARY_DIR}/test-bin")
 foreach(test_src_file ${test_src_files})
 	get_filename_component(test_name "${test_src_file}" NAME_WE)
 	add_executable("${test_name}" "${test_src_file}")
+	add_dependencies("${test_name}" ${all_libraries})
 	target_link_libraries("${test_name}" ${all_libraries})
 
 	add_custom_command(TARGET run-tests
 		COMMAND "${test_bin_dir}/${test_name}")
+	add_dependencies(run-tests "${test_name}")
+
 	set_target_properties("${test_name}" PROPERTIES
 		RUNTIME_OUTPUT_DIRECTORY "${test_bin_dir}")
 endforeach()
