Refactored cmake style.

--- a/c++/cmake/CMakeLists.txt
+++ b/c++/cmake/CMakeLists.txt
@@ -17,14 +17,14 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Werror -pedantic")
 
 set(src_dir "${CMAKE_CURRENT_SOURCE_DIR}/src")
 file(GLOB_RECURSE src_files "${src_dir}/*.cpp")
-set(MAIN_SRC "${src_dir}/main.cpp")
-list(REMOVE_ITEM src_files "${MAIN_SRC}")
+set(main_src "${src_dir}/main.cpp")
+list(REMOVE_ITEM src_files "${main_src}")
 
 add_library("${project_lib}" STATIC ${src_files})
 set_target_properties(${project_lib} PROPERTIES
 	OUTPUT_NAME ${PROJECT_NAME})
 
-add_executable("${project_exec}" "${MAIN_SRC}")
+add_executable("${project_exec}" "${main_src}")
 target_link_libraries("${project_exec}" "${project_lib}")
 
 
